test/test-files/analyzer/structs/error-constructor-not-found/exception.out
Semantic error in : ./test-files/analyzer/structs/error-constructor-not-found/source.spice:7:29:
Referenced undefined function: Function/Procedure 'TestStruct.ctor()' could not be found

Struct testStruct = TestStruct();
                    ^^^^^^^^^^^^